--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1653,3 +1653,11 @@ section,
 .machine-product .machine-product-images img {
   border-radius: 10px;
 }
+
+#g-recaptcha-response { 
+  display: block !important;
+  position: absolute;
+  margin: -50px 0 0 0 !important;
+  z-index: -999999;
+  opacity: 0;
+  }
