--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1661,3 +1661,46 @@ section,
   z-index: -999999;
   opacity: 0;
 }
+
+.card-serve {
+  width: auto;
+  height: auto;
+  margin: 15px auto;
+  position: relative;
+  overflow: hidden;
+  border: 5px solid var(--accent-color);
+  border-radius: 10px;
+}
+.card-serve:hover .overlay {
+  opacity: 1;
+  transform: scale(1);
+}
+.overlay{
+  position: absolute;
+  background-color: rgba(69, 69, 69, 0.442);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  transform: scale(1.3);
+  opacity: 0;
+  transition: transform .4s ease 0s;
+}
+.overlay span{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: bold;
+  font-size: 5em;
+  color: #fff;
+  font-family: Sans-serif;
+  font-size: 20px;
+}
+
+.card-serve img{
+  transition: transform .8s ease;
+}
+
+.card-serve:hover img{
+  transform: scale(1.1);
+}
